# potential-broccoli

./: Cargo.toml  Dockerfile  Makefile  README.md  dev.sh  potential-broccoli.yaml
potential-broccoli/: Cargo.toml  build.rs
potential-broccoli-common/: Cargo.toml
potential-broccoli-common/src/: lib.rs  statics.rs
potential-broccoli-ebpf/: Cargo.toml
potential-broccoli-ebpf/src/: lib.rs  main.rs
potential-broccoli-ebpf/src/trace/: kprober.rs  mod.rs
potential-broccoli/src/: main.rs
src/: potential-broccoli.sh  readline.bt
