[package]
name = "potential-broccoli-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
potential-broccoli-common = { path = "../potential-broccoli-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "potential-broccoli"
path = "src/main.rs"
